ttdl (0.3.3) unstable; urgency=medium

  * A list of IDs can be set in command line: "ttdl list 2,3,4"

  * Fix adding todos that start with project or context

 -- Vladimir Markelov <vmatroskin@gmail.com>  Thu, 10 Jan 2019 22:28:14 -0800

ttdl (0.3.2) unstable; urgency=medium

  * Change command detection rule:
  If the first word is not a command, and the subject is not empty then
  the command is Add;
  If the first word is not a command and there is no subject then the
  command is List;

  * New option: 'version' - show application version

 -- Vladimir Markelov <vmatroskin@gmail.com>  Wed, 09 Jan 2019 21:43:01 -0800